@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    
+
     <div class="header-radius">
         <img src="img/header-radius.svg" alt="">
     </div>
@@ -68,6 +68,38 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Start Experties -->
+    <section class="expertise">
+        <div class="container">
+            <div class="exp-top">
+                <h2>My Expertise</h2>
+            </div>
+            <div class="row">
+                <div class="col-6 exp-item">
+                    <div class="title">
+                        <div class="exp-img"><img src="img/icons/exp-icon.svg" alt=""></div>
+                        <h3>Strategy & Direction</h3>
+                    </div>
+                    <div class="exp-content">
+                        <p> Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    </div>
+                </div>
+                
+                <div class="col-6 exp-item">
+                    <div class="title">
+                        <div class="exp-img"><img src="img/icons/exp-icon.svg" alt=""></div>
+                        <h3>Strategy & Direction</h3>
+                    </div>
+                    <div class="exp-content">
+                        <p> Understand First. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    </div>
+                </div>
+
+            </div>
+            
         </div>
     </section>
 
